feat: implement file approval, rejection, and delivery functionalities for managers
- Added new endpoints in FileController for approving, rejecting, and delivering files, requiring MANAGER role for access.
- Enhanced FileService with methods to handle file approval, rejection with reasons, and delivery to customers, including necessary access checks.
- Updated frontend components to integrate new file management functionalities, including UI updates for task assignments and file actions.
- Introduced error handling for unauthorized access and invalid file statuses during approval and rejection processes.

--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -4,6 +4,10 @@ server:
     context-path: ${SERVER_CONTEXT_PATH:}
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
   datasource:
     url: ${DATABASE_URL}
     username: ${DATABASE_USERNAME}
