--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,9 +23,12 @@
     "expo-av": "~16.0.7",
     "expo-crypto": "^15.0.7",
     "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.19",
     "expo-linear-gradient": "~15.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
@@ -36,7 +39,8 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
-    "sockjs-client": "^1.6.1"
+    "sockjs-client": "^1.6.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
