feat: implement submission delivery feature for managers
- Added a new endpoint for managers to deliver submissions, which includes delivering all associated files.
- Updated the FileSubmissionService to handle submission delivery logic, including status updates and event queuing for notifications.
- Enhanced the NotificationService to create notifications for customers upon submission delivery.
- Modified frontend components to support submission delivery actions and updated UI elements accordingly.
- Introduced a new notification type for submission delivery events.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -59,6 +59,7 @@ app:
       task.assignment.assigned: task-assignment-assigned
       task.file.uploaded: task-file-uploaded
       chat.room.created: chat-events
+      submission.delivered: submission-delivered
 
 logging:
   level:
