feat: update database configurations and enhance file submission features
- Updated database connection URLs and credentials for multiple services in application-dev.yml files.
- Refactored FileSubmissionController to improve the retrieval of delivered submissions for customers, returning detailed contract and milestone information.
- Enhanced FileSubmissionService to support new logic for fetching customer-specific delivery data and integrated request information retrieval.
- Added a new customer review submission feature to allow users to accept or request revisions on submissions.
- Updated frontend components to include a new route for milestone deliveries and improved submission handling in the ContractDetailPage.

--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://shinkansen.proxy.rlwy.net:22601/railway
+    url: jdbc:postgresql://tramway.proxy.rlwy.net:31325/railway
     username: postgres
-    password: wQMmyHLmSzihiSpyGvKBdeUWSalNIAuT
+    password: IcnZyTTtdUyHtFYAkZFyRUCYDeLfdZQM
   jpa:
     hibernate:
       ddl-auto: update
