chore: update database connection details for multiple services
- Changed datasource URLs and passwords in application-dev.yaml for chat, notification, request, and specialist services to reflect new database configurations.

--- a/backend/chat-service/src/main/resources/application-dev.yaml
+++ b/backend/chat-service/src/main/resources/application-dev.yaml
@@ -6,9 +6,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://shortline.proxy.rlwy.net:35498/railway
+    url: jdbc:postgresql://metro.proxy.rlwy.net:31175/railway
     username: postgres
-    password: ByoneKvmWtUtLqQKTlocjzUFOmBYicXD
+    password: pvaOvFzjcuEJAxPkvaLFjBHTSNZPzHrG
   jpa:
     hibernate:
       ddl-auto: update
