feat: implement revision notification events in NotificationService
- Added methods to create notifications for various revision-related events: requested, delivered, submitted, approved, and rejected.
- Integrated Kafka event publishing for these notifications to ensure real-time updates for managers, specialists, and customers.
- Updated application configuration files to include new Kafka topics for revision notifications.
- Enhanced error handling and logging for notification creation processes.
- Introduced a new error code for handling cases where a revision request is not found.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -60,6 +60,12 @@ app:
       task.file.uploaded: task-file-uploaded
       chat.room.created: chat-events
       submission.delivered: submission-delivered
+      revision.requested: revision-requested
+      revision.delivered: revision-delivered
+      revision.submitted: revision-submitted
+      revision.approved: revision-approved
+      revision.rejected: revision-rejected
+      milestone.paid.notification: milestone-paid-notification
 
 logging:
   level:
