--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -52,6 +52,12 @@ app:
       task.assignment.assigned: ${KAFKA_TOPIC_TASK_ASSIGNMENT_ASSIGNED:task-assignment-assigned}
       task.file.uploaded: ${KAFKA_TOPIC_TASK_FILE_UPLOADED:task-file-uploaded}
       submission.delivered: ${KAFKA_TOPIC_SUBMISSION_DELIVERED:submission-delivered}
+      revision.requested: ${KAFKA_TOPIC_REVISION_REQUESTED:revision-requested}
+      revision.delivered: ${KAFKA_TOPIC_REVISION_DELIVERED:revision-delivered}
+      revision.submitted: ${KAFKA_TOPIC_REVISION_SUBMITTED:revision-submitted}
+      revision.approved: ${KAFKA_TOPIC_REVISION_APPROVED:revision-approved}
+      revision.rejected: ${KAFKA_TOPIC_REVISION_REJECTED:revision-rejected}
+      milestone.paid.notification: ${KAFKA_TOPIC_MILESTONE_PAID_NOTIFICATION:milestone-paid-notification}
 
 # Request Service Configuration
 request:
