feat: add revision fee payment functionality
- Implemented a new endpoint in WalletController for processing revision fee payments.
- Enhanced WalletService to handle the business logic for paying revision fees, including validation and transaction creation.
- Updated WalletTransaction entity to include submission ID for tracking revision fee payments.
- Added new WalletTxType for revision fees in the WalletTxType enum.
- Updated application configuration files to include new Kafka topic mappings for revision fee payment events.
- Enhanced frontend with new components and API integration for managing revision fee payments.

--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -49,6 +49,7 @@ app:
       contract.signed.email: ${KAFKA_TOPIC_CONTRACT_SIGNED_EMAIL:contract-signed-email}
       billing.deposit.paid: ${KAFKA_TOPIC_BILLING_DEPOSIT_PAID:billing-deposit-paid}
       billing.milestone.paid: ${KAFKA_TOPIC_BILLING_MILESTONE_PAID:billing-milestone-paid}
+      billing.revision.fee.paid: ${KAFKA_TOPIC_BILLING_REVISION_FEE_PAID:billing-revision-fee-paid}
       task.assignment.assigned: ${KAFKA_TOPIC_TASK_ASSIGNMENT_ASSIGNED:task-assignment-assigned}
       submission.delivered: ${KAFKA_TOPIC_SUBMISSION_DELIVERED:submission-delivered}
       revision.requested: ${KAFKA_TOPIC_REVISION_REQUESTED:revision-requested}
