--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -44,3 +44,4 @@ app:
     mappings:
       billing.deposit.paid: billing-deposit-paid
       billing.milestone.paid: billing-milestone-paid
+      billing.revision.fee.paid: billing-revision-fee-paid
