--- a/backend/billing-service/src/main/resources/application-prod.yml
+++ b/backend/billing-service/src/main/resources/application-prod.yml
@@ -40,3 +40,4 @@ app:
     mappings:
       billing.deposit.paid: ${KAFKA_TOPIC_BILLING_DEPOSIT_PAID:billing-deposit-paid}
       billing.milestone.paid: ${KAFKA_TOPIC_BILLING_MILESTONE_PAID:billing-milestone-paid}
+      billing.revision.fee.paid: ${KAFKA_TOPIC_BILLING_REVISION_FEE_PAID:billing-revision-fee-paid}
