--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -53,6 +53,7 @@ app:
       contract.signed.email: contract-signed-email
       billing.deposit.paid: billing-deposit-paid
       billing.milestone.paid: billing-milestone-paid
+      billing.revision.fee.paid: billing-revision-fee-paid
       task.assignment.assigned: task-assignment-assigned
       submission.delivered: submission-delivered
       revision.requested: revision-requested
