feat: implement revision fee refund functionality
- Added methods in WalletService to handle refunding revision fees, including validation and transaction creation.
- Introduced new repository methods in WalletTransactionRepository for retrieving transactions by walletTxId and checking for existing refunds.
- Enhanced NotificationService to create notifications for refunded revision fees.
- Updated application configuration files to include new Kafka topics for refunded revision fee events.
- Modified frontend components to support displaying refund notifications and managing revision fee refunds.

--- a/backend/billing-service/src/main/resources/application-dev.yml
+++ b/backend/billing-service/src/main/resources/application-dev.yml
@@ -22,6 +22,14 @@ spring:
       mode: never
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: billing-service
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      auto-offset-reset: earliest
+      enable-auto-commit: false
+      properties:
+        spring.json.trusted.packages: "*"
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -45,3 +53,4 @@ app:
       billing.deposit.paid: billing-deposit-paid
       billing.milestone.paid: billing-milestone-paid
       billing.revision.fee.paid: billing-revision-fee-paid
+      billing.revision.fee.refunded: billing-revision-fee-refunded # New topic for refunded revision fees
