--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -64,6 +64,7 @@ app:
       revision.submitted: revision-submitted
       revision.approved: revision-approved
       revision.rejected: revision-rejected
+      billing.revision.fee.refunded: billing-revision-fee-refunded
       milestone.paid.notification: milestone-paid-notification
 
 logging:
