--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -46,6 +46,7 @@ app:
     mappings:
       file.uploaded: ${KAFKA_TOPIC_FILE_UPLOADED:file-uploaded}
       contract.otp.email: ${KAFKA_TOPIC_CONTRACT_OTP_EMAIL:contract-otp-email}
+      contract.signed: ${KAFKA_TOPIC_CONTRACT_SIGNED:contract-events}
       contract.signed.email: ${KAFKA_TOPIC_CONTRACT_SIGNED_EMAIL:contract-signed-email}
       billing.deposit.paid: ${KAFKA_TOPIC_BILLING_DEPOSIT_PAID:billing-deposit-paid}
       billing.milestone.paid: ${KAFKA_TOPIC_BILLING_MILESTONE_PAID:billing-milestone-paid}
