feat: enhance contract chat room creation with welcome message
- Updated ContractEventConsumer to create contract chat rooms and send a welcome message upon contract signing.
- Refactored createContractRoomAndCloseRequestRoom method in ChatRoomService to create rooms and send system messages.
- Introduced new event mappings for chat system messages in application configuration files.
- Improved logging for better traceability of chat room creation and message sending.

--- a/backend/chat-service/src/main/resources/application-dev.yaml
+++ b/backend/chat-service/src/main/resources/application-dev.yaml
@@ -47,11 +47,12 @@ jwt:
 app:
   outbox:
     max-retries: 3
-  event-topics:
-    mappings:
+    event-topics:
+      mappings:
       request.assigned: request-events
       contract.signed: contract-events
       chat.room.created: chat-events
+      chat.system.message: chat-system-message-events
 
 # Springdoc OpenAPI
 springdoc:
