--- a/backend/chat-service/src/main/resources/application-prod.yaml
+++ b/backend/chat-service/src/main/resources/application-prod.yaml
@@ -60,11 +60,12 @@ jwt:
 app:
   outbox:
     max-retries: ${OUTBOX_MAX_RETRIES:3}
-  event-topics:
+    event-topics:
     mappings:
       request.assigned: ${KAFKA_TOPIC_REQUEST_ASSIGNED:request-events}
       contract.signed: ${KAFKA_TOPIC_CONTRACT_SIGNED:contract-events}
       chat.room.created: ${KAFKA_TOPIC_CHAT_ROOM_CREATED:chat-events}
+      chat.system.message: ${KAFKA_TOPIC_CHAT_SYSTEM_MESSAGE:chat-system-message-events}
 
 # Springdoc OpenAPI
 springdoc:
