feat: add milestone ready for payment notification feature
- Implemented a new method in NotificationService to create notifications for customers when a milestone is ready for payment.
- Updated application configuration files to include the new notification topic for milestone readiness.
- Enhanced ContractService to trigger the milestone ready for payment notification event upon payment processing.
- Added new fields in relevant response DTOs to track installment status and milestone work status for better UI representation.
- Updated frontend components to display milestone statuses and payment options accordingly.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -66,6 +66,7 @@ app:
       revision.rejected: revision-rejected
       billing.revision.fee.refunded: billing-revision-fee-refunded
       milestone.paid.notification: milestone-paid-notification
+      milestone.ready.for.payment.notification: milestone-ready-for-payment-notification
 
 logging:
   level:
