--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -59,6 +59,7 @@ app:
       revision.approved: ${KAFKA_TOPIC_REVISION_APPROVED:revision-approved}
       revision.rejected: ${KAFKA_TOPIC_REVISION_REJECTED:revision-rejected}
       milestone.paid.notification: ${KAFKA_TOPIC_MILESTONE_PAID_NOTIFICATION:milestone-paid-notification}
+      milestone.ready.for.payment.notification: ${KAFKA_TOPIC_MILESTONE_READY_FOR_PAYMENT_NOTIFICATION:milestone-ready-for-payment-notification}
       billing.revision.fee.refunded: ${KAFKA_TOPIC_BILLING_REVISION_FEE_REFUNDED:billing-revision-fee-refunded} # New topic for refunded revision fees
       chat.system.message: ${KAFKA_TOPIC_CHAT_SYSTEM_MESSAGE:chat-system-message-events}
 
