feat: add task assignment ready to start notification feature
- Implemented a new method in NotificationService to create notifications when a task assignment is ready for a specialist to start working.
- Updated application configuration files to include the new notification topic for task assignment readiness.
- Enhanced TaskAssignmentService to trigger the task assignment ready to start notification event upon task activation.
- Added relevant logging for notification creation and event queuing to improve traceability.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -57,6 +57,7 @@ app:
       contract.otp.email: contract-otp-email
       contract.signed.email: contract-signed-email
       task.assignment.assigned: task-assignment-assigned
+      task.assignment.ready.to.start: task-assignment-ready-to-start
       chat.room.created: chat-events
       submission.delivered: submission-delivered
       revision.requested: revision-requested
