feat: enhance notification system for task assignments and contracts
- Added new notification methods in NotificationService for task assignment cancellation, task issue reporting, and contract notifications.
- Updated application configuration files to include new notification topics for task assignment cancellation, task issue reporting, and contract notifications.
- Enhanced TaskAssignmentService and ContractService to trigger the respective notification events upon relevant actions.
- Improved logging for notification creation and event queuing to enhance traceability and debugging capabilities.

--- a/backend/notification-service/src/main/resources/application-dev.yml
+++ b/backend/notification-service/src/main/resources/application-dev.yml
@@ -58,6 +58,9 @@ app:
       contract.signed.email: contract-signed-email
       task.assignment.assigned: task-assignment-assigned
       task.assignment.ready.to.start: task-assignment-ready-to-start
+      task.assignment.canceled: task-assignment-canceled
+      task.issue.reported: task-issue-reported
+      contract.notification: contract-notification
       chat.room.created: chat-events
       submission.delivered: submission-delivered
       revision.requested: revision-requested
