chore: update environment configuration and Dockerfiles for services
- Updated env.example to include external database URLs and Redis configuration for local development.
- Modified Dockerfiles for all services to use the latest Maven and JRE versions.
- Adjusted service ports in application configuration files to utilize environment variables for better flexibility.
- Enhanced build-and-push script to support Docker Hub username from .env file and improved logging for build processes.

--- a/backend/chat-service/Dockerfile
+++ b/backend/chat-service/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build stage
-FROM maven:3.9-eclipse-temurin-21-alpine AS build
+FROM maven:3.9.9-eclipse-temurin-21-alpine AS build
 
 WORKDIR /app
 
@@ -18,7 +18,7 @@ COPY chat-service/src ./chat-service/src
 RUN mvn -f chat-service/pom.xml clean package -DskipTests
 
 # Stage 2: Runtime stage
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:21.0.2_13-jre-alpine
 
 WORKDIR /app
 
@@ -31,10 +31,6 @@ COPY --from=build /app/chat-service/target/*.jar app.jar
 
 # Expose port
 EXPOSE 8088
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
-  CMD wget --quiet --tries=1 --spider http://localhost:8088/actuator/health || exit 1
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
