--- a/backend/notification-service/src/main/resources/application-prod.yml
+++ b/backend/notification-service/src/main/resources/application-prod.yml
@@ -32,7 +32,7 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
     consumer:
-      group-id: notification-service
+      group-id: ${KAFKA_CONSUMER_GROUP_ID:notification-service}
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       auto-offset-reset: earliest
@@ -47,8 +47,8 @@ app:
     url: ${FRONTEND_URL:https://mutrapro.com}
   event-topics:
     mappings:
-      email.verification: email-verification
-      password.reset: password-reset
+      email.verification: ${KAFKA_TOPIC_EMAIL_VERIFICATION:email-verification}
+      password.reset: ${KAFKA_TOPIC_PASSWORD_RESET:password-reset}
       contract.otp.email: ${KAFKA_TOPIC_CONTRACT_OTP_EMAIL:contract-otp-email}
       contract.signed.email: ${KAFKA_TOPIC_CONTRACT_SIGNED_EMAIL:contract-signed-email}
       task.assignment.assigned: ${KAFKA_TOPIC_TASK_ASSIGNMENT_ASSIGNED:task-assignment-assigned}
