--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -96,7 +96,7 @@ specialist:
 aws:
   s3:
     enabled: ${AWS_S3_ENABLED:true}
-    bucket-name: ${AWS_S3_BUCKET_NAME:mutrapro-prod-files}
+    bucket-name: ${AWS_S3_BUCKET_NAME:mutrapro-dev-files}
     region: ${AWS_S3_REGION:ap-southeast-1}
     access-key: ${AWS_S3_ACCESS_KEY}
     secret-key: ${AWS_S3_SECRET_KEY}
