--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# Database Configuration
+# Database Configuration (Local Development)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=mutrapro
@@ -6,10 +6,76 @@ DB_USER=mutrapro_user
 DB_PASSWORD=mutrapro_password
 SPRING_PROFILES_ACTIVE=dev
 
+# External Database URLs (Railway/RDS) - Production
+# Format: jdbc:postgresql://host:port/database
+# Example: jdbc:postgresql://containers-us-west-xxx.railway.app:5432/railway
+GATEWAY_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/gateway_db
+GATEWAY_DATASOURCE_USERNAME=postgres
+GATEWAY_DATASOURCE_PASSWORD=your_password
+
+IDENTITY_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/identity_db
+IDENTITY_DATASOURCE_USERNAME=postgres
+IDENTITY_DATASOURCE_PASSWORD=your_password
+
+PROJECT_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/project_db
+PROJECT_DATASOURCE_USERNAME=postgres
+PROJECT_DATASOURCE_PASSWORD=your_password
+
+BILLING_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/billing_db
+BILLING_DATASOURCE_USERNAME=postgres
+BILLING_DATASOURCE_PASSWORD=your_password
+
+REQUEST_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/request_db
+REQUEST_DATASOURCE_USERNAME=postgres
+REQUEST_DATASOURCE_PASSWORD=your_password
+
+NOTIFICATION_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/notification_db
+NOTIFICATION_DATASOURCE_USERNAME=postgres
+NOTIFICATION_DATASOURCE_PASSWORD=your_password
+
+SPECIALIST_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/specialist_db
+SPECIALIST_DATASOURCE_USERNAME=postgres
+SPECIALIST_DATASOURCE_PASSWORD=your_password
+
+STUDIO_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/studio_db
+STUDIO_DATASOURCE_USERNAME=postgres
+STUDIO_DATASOURCE_PASSWORD=your_password
+
+CHAT_DATASOURCE_URL=jdbc:postgresql://your-railway-host:5432/chat_db
+CHAT_DATASOURCE_USERNAME=postgres
+CHAT_DATASOURCE_PASSWORD=your_password
+
 # Redis Configuration
-REDIS_HOST=localhost
+# Có thể là external Redis (Redis Cloud, Railway, ElastiCache, Upstash) hoặc local
+# Nếu dùng local Redis container, set REDIS_HOST=redis (tên service trong docker-compose)
+REDIS_HOST=your-redis-host
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=your_redis_password
+
+# Redis Cloud Example:
+# REDIS_HOST=your-redis-instance.redis.cloud
+# REDIS_PORT=12345
+# REDIS_PASSWORD=your_redis_cloud_password
+#
+# Hoặc nếu Redis Cloud cung cấp connection string:
+# redis://default:password@host:port
+# Thì extract: REDIS_HOST=host, REDIS_PORT=port, REDIS_PASSWORD=password
+
+# Các provider khác:
+# - Railway: containers-us-west-redis.railway.app
+# - AWS ElastiCache: your-elasticache-endpoint.cache.amazonaws.com
+# - Upstash: your-redis-host.upstash.io
+# - Local container: redis
+
+# Kafka Configuration
+# Nếu có managed Kafka service (AWS MSK, Confluent Cloud, Upstash, Railway):
+# KAFKA_BOOTSTRAP_SERVERS=your-kafka-host:9092
+# KAFKA_SECURITY_PROTOCOL=SASL_SSL (nếu cần)
+# KAFKA_SASL_MECHANISM=PLAIN
+# KAFKA_SASL_JAAS_CONFIG=org.apache.kafka.common.security.plain.PlainLoginModule required username='your_username' password='your_password';
+# 
+# Nếu dùng local Kafka container (Redpanda), để trống hoặc dùng: kafka:9092
+KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_here
