--- a/backend/api-gateway/Dockerfile
+++ b/backend/api-gateway/Dockerfile
@@ -1,23 +1,23 @@
 # Multi-stage build cho API Gateway
-FROM maven:3.9.6-eclipse-temurin-21 AS build
+FROM maven:3.9.9-eclipse-temurin-21-alpine AS build
 
 # Set working directory
 WORKDIR /app
 
 # Copy shared module first (dependency)
-COPY ../shared /app/shared
+COPY shared /app/shared
 
 # Build shared module
 RUN cd shared && mvn clean install -DskipTests
 
 # Copy api-gateway source code
-COPY . /app/api-gateway
+COPY api-gateway /app/api-gateway
 
 # Build api-gateway
 RUN cd api-gateway && mvn clean package -DskipTests
 
 # Runtime stage
-FROM eclipse-temurin:21-jre-alpine
+FROM eclipse-temurin:21.0.2_13-jre-alpine
 
 # Install necessary packages
 RUN apk add --no-cache \
@@ -47,10 +47,6 @@ USER appuser
 
 # Expose port
 EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:8080/actuator/health || exit 1
 
 # JVM options for container
 ENV JAVA_OPTS="-Xmx512m -Xms256m -XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC"
